--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.21.1",
         "dayjs": "^1.10.7",
         "exif-js": "^2.3.0",
+        "html-to-image": "^1.9.0",
         "html2canvas": "^1.4.1",
         "js-base64": "^3.7.2",
         "vue": "^3.0.5",
